# cmake_study_simba

t1/: CMakeLists.txt
t2/: CMakeLists.txt
t2/src/: CMakeLists.txt  main.c
