#PROJECT(HELLO)
#SET(SRC_LIST main.c)
#MESSAGE(STATUS "this is BINARY dir" $(HELLO_BINARY_DIR))
#MESSAGE(STATUS "this is SOURCE dir" $(HELLO_SOURCE_DIR))
#ADD_EXECUTABLE(hello SRC_LIST)

PROJECT(HELLO) 
SET(SRC_LIST main.c) 
MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR})
ADD_EXECUTABLE(hello ${SRC_LIST})